Fix loader colours for better visibility

--- a/core/css/variables.scss
+++ b/core/css/variables.scss
@@ -65,7 +65,7 @@ $image-logo: url('../img/logo.svg?v=1') !default;
 $image-login-background: url('../img/background.png?v=2') !default;
 
 $color-loading-light: #ccc !default;
-$color-loading-dark: #777 !default;
+$color-loading-dark: #444 !default;
 
 $color-box-shadow: rgba(nc-darken($color-main-background, 70%), 0.5) !default;
 
